--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+node_modules
+.env*
+.next
+out
+/.vercel
+/playwright-report
+/test-results
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
